apps/base/adguard-home/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: adguard-home
spec:
  redirectScheme:
    scheme: https
    permanent: true
