apps/base/adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
