apps/base/adguard-home/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard-home
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.130
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
  selector:
    app: adguard-home
