apps/base/adguard-home/service-web-w1.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-w1
  namespace: adguard-home
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: adguard-home
    instance: w1
  type: ClusterIP
