apps/base/adguard-home/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: adguard-home
  type: ClusterIP
