apps/base/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard-home
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd,traefik-security-headers@kubernetescrd,traefik-rate-limit-standard@kubernetescrd,traefik-csp-report-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - adguard.h0melab.work
      secretName: adguard-home-tls-secret
  rules:
    - host: adguard.h0melab.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home
                port:
                  number: 80
